# rebrickable-cli

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.sh  deps.bzl  go.mod  go.sum  main.go  main_test.go  test.sh
.github/workflows/: test.yml
cli/: BUILD.bazel  main.go  main_test.go
cli/cmd/: BUILD.bazel  sets.go  user.go
cli/cmd/api/: BUILD.bazel  api.go  api_test.go
cmd/: BUILD.bazel  root.go  sets.go  user.go
cmd/api/: BUILD.bazel  api.go
testdata/: hello.txtar
