load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/bu3/rebrickable-cli/cli",
    visibility = ["//visibility:private"],
    deps = ["//cli/cmd"],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "cli_test",
    srcs = ["main_test.go"],
    embed = [":cli_lib"],
    deps = [
        "//cli/cmd",
        "@com_github_rogpeppe_go_internal//testscript",
    ],
)
