load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "sets.go",
        "user.go",
    ],
    importpath = "git@github.com:bu3/rebrickable-cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bu3_rebrickable_cli//cmd/api:go_default_library",
        "@com_github_go_resty_resty_v2//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
