load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "sets.go",
        "user.go",
    ],
    importpath = "github.com/bu3/rebrickable-cli/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cli/cmd/api",
        "@com_github_go_resty_resty_v2//:resty",
        "@com_github_spf13_cobra//:cobra",
        "@org_golang_x_net//context",
    ],
)
